--- a/app/src/main/res/layout/fragment_community_modify.xml
+++ b/app/src/main/res/layout/fragment_community_modify.xml
@@ -184,9 +184,8 @@
                         android:gravity="top"
                         android:hint="글 내용을 작성해주세요. (최대 2000자)"
                         android:includeFontPadding="false"
-                        android:lines="10"
+                        android:minLines="10"
                         android:maxLength="2000"
-                        android:maxLines="30"
                         android:text=""
                         android:textColor="@color/black"
                         android:textColorHint="@color/lightGray"
