--- a/app/src/main/res/layout/fragment_my_write.xml
+++ b/app/src/main/res/layout/fragment_my_write.xml
@@ -1,85 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.mywrite.MyWriteFragment"
-    android:background="@color/white">
+    tools:context=".ui.mywrite.MyWriteFragment">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/myWriteToolbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/white"
-        android:gravity="start"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/myWriteToolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme" />
 
-            <TextView
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/myWriteTabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            app:tabBackground="@color/white"
+            app:tabIndicatorColor="@color/black"
+            app:tabIndicatorFullWidth="true"
+            app:tabIndicatorHeight="2dp"
+            app:tabSelectedTextColor="@color/black">
+
+            <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
                 android:fontFamily="@font/notosans_bold"
-                android:text="커뮤니티"
-                android:textColor="@color/black"
-                android:textSize="20sp"
                 android:includeFontPadding="false"
-                android:layout_gravity="center_vertical"/>
+                android:text="공지사항" />
 
-        </LinearLayout>
-
-
-    </com.google.android.material.appbar.MaterialToolbar>
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/myWriteTabLayout"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:background="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myWriteToolbar"
-        app:tabIndicatorFullWidth="true"
-        app:tabSelectedTextColor="@color/black"
-        app:tabTextAppearance="@style/MySelectedTabTextAppearance"
-        app:tabTextColor="@color/lightGray"
-        app:tabIndicatorColor="@color/third"
-        app:tabIndicatorHeight="2dp"
-        app:tabIndicatorGravity="bottom"
-        app:tabRippleColor="@color/fourth">
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="내가쓴글"/>
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="좋아요"/>
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_bold"
+                android:includeFontPadding="false"
+                android:text="FAQ" />
 
 
+        </com.google.android.material.tabs.TabLayout>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    </com.google.android.material.tabs.TabLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/containerMyWriteTab"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myWriteTabLayout"
-        app:layout_constraintVertical_bias="0.0" />
+                <FrameLayout
+                    android:id="@+id/myWriteFrameLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
