--- a/app/src/main/res/layout/fragment_view_f_a_q.xml
+++ b/app/src/main/res/layout/fragment_view_f_a_q.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".ui.service.ViewMyQFragment">
+    tools:context=".ui.service.ViewFAQFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".fragment.service.ViewMyQFragment">
+        tools:context=".fragment.service.ViewFAQFragment">
 
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/viewMyQToolbar"
+            android:id="@+id/viewFAQToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
@@ -33,48 +33,15 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/viewMyQTextViewQType"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="@font/notosans_semibold"
-                    android:includeFontPadding="false"
-                    android:text="아파트톡의 중심은 항상 고객님입니다."
-                    android:textSize="18dp"
-                    android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/viewMyQTextViewQTypeInfo"
+                    android:id="@+id/viewFAQTextViewTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="@font/notosans_regular"
-                    android:includeFontPadding="false"
-                    android:text="이용하며 느끼는 불편한 점이나 바라는 점을 알려주세요 \n소중한 의견으로 한 걸음 더 다가가는 아파트톡이 되겠습니다"
-                    android:textSize="14dp" />
-
-                <TextView
-                    android:id="@+id/viewMyQTextViewQTypeInfoTime"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="@font/notosans_semibold"
-                    android:includeFontPadding="false"
-                    android:text="문의량이 많은 경우 답변은 24시간 이상 소요될 수 있습니다"
-                    android:textStyle="bold"
-                    android:textSize="14dp" />
-
-
-                <TextView
-                    android:id="@+id/viewMyQTextViewTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
                     android:layout_marginBottom="4dp"
-                    android:text="내용"
                     android:fontFamily="@font/notosans_semibold"
                     android:includeFontPadding="false"
+                    android:text="질문"
                     android:textSize="16dp"
                     android:textStyle="bold" />
 
@@ -86,26 +53,26 @@
                     app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/viewMyQContent"
+                        android:id="@+id/viewFAQContent"
                         android:layout_width="match_parent"
-                        android:layout_height="250dp"
-                        android:gravity="top"
-                        android:text="질문한 내용입니다."
+                        android:layout_height="wrap_content"
                         android:fontFamily="@font/notosans_medium"
+                        android:gravity="top"
                         android:includeFontPadding="false"
                         android:inputType="text|textMultiLine"
+                        android:text="질문입니다."
                         android:textSize="14dp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
-                    android:id="@+id/viewMyQTextViewAnswer"
+                    android:id="@+id/viewFAQTextViewAnswer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="4dp"
                     android:fontFamily="@font/notosans_semibold"
                     android:includeFontPadding="false"
-                    android:text="답변"
+                    android:text="내용"
                     android:textSize="16dp"
                     android:textStyle="bold" />
 
@@ -117,14 +84,14 @@
                     app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/viewMyQTextViewAnsContent"
+                        android:id="@+id/viewFAQTextViewAnsContent"
                         android:layout_width="match_parent"
                         android:layout_height="250dp"
-                        android:gravity="top"
                         android:fontFamily="@font/notosans_medium"
+                        android:gravity="top"
                         android:includeFontPadding="false"
-                        android:text="답변한 내용입니다."
                         android:inputType="text|textMultiLine"
+                        android:text="내용 입니다."
                         android:textSize="14dp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
