--- a/app/src/main/res/layout/row_faq_item.xml
+++ b/app/src/main/res/layout/row_faq_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rowFAQLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -15,31 +16,20 @@
             android:id="@+id/rowFAQTextViewTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="TextView"
+            android:layout_marginTop="10dp"
             android:fontFamily="@font/notosans_bold"
             android:includeFontPadding="false"
+            android:text="TextView"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/rowFAQTextViewDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="TextView"
-            android:fontFamily="@font/notosans_regular"
-            android:includeFontPadding="false"
-            android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rowMyQTextViewTitle" />
-
         <View
             android:id="@+id/view"
             android:layout_width="wrap_content"
             android:layout_height="1dp"
+            android:layout_marginTop="10dp"
             android:background="#D7D7D7" />
     </LinearLayout>
 
