fix : #75 일부 코드 수정

--- a/app/src/main/res/layout/activity_reserve.xml
+++ b/app/src/main/res/layout/activity_reserve.xml
@@ -9,8 +9,8 @@
     tools:context=".ui.reservation.ReserveActivity">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/myWriteFragmentContainerView"
+        android:id="@+id/revervationFragmentContainerView"
         android:name="kr.co.lion.application.finalproject_aparttalk.ui.reservation.ReservationFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
