--- a/app/src/main/res/layout/activity_my_write.xml
+++ b/app/src/main/res/layout/activity_my_write.xml
@@ -11,6 +11,6 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/myWriteFragmentContainerView"
         android:name="kr.co.lion.application.finalproject_aparttalk.ui.mywrite.MyWriteFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
