--- a/app/src/main/res/layout/fragment_inquiring.xml
+++ b/app/src/main/res/layout/fragment_inquiring.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#FFFFFF"
+    android:padding="20dp"
     tools:context="ui.inquiry.InquiringFragment">
 
 
