--- a/app/src/main/res/layout/fragment_survey.xml
+++ b/app/src/main/res/layout/fragment_survey.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#FFFFFF"
+    android:padding="20dp"
     tools:context="ui.vote.SurveyFragment" >
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -19,8 +21,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/surveyTitleTextView"
@@ -38,7 +39,9 @@
             android:layout_height="wrap_content"
             android:text="치킨"
             android:fontFamily="@font/notosans_regular"
-            android:includeFontPadding="false"/>
+            android:includeFontPadding="false"
+            android:theme="@style/CustomCheckBox"
+            android:textSize="16sp"/>
 
         <CheckBox
             android:id="@+id/surveyCheckBox2"
@@ -46,7 +49,9 @@
             android:layout_height="wrap_content"
             android:text="피자"
             android:fontFamily="@font/notosans_regular"
-            android:includeFontPadding="false"/>
+            android:includeFontPadding="false"
+            android:theme="@style/CustomCheckBox"
+            android:textSize="16sp"/>
 
         <CheckBox
             android:id="@+id/surveyCheckBox3"
@@ -54,7 +59,9 @@
             android:layout_height="wrap_content"
             android:text="햄버거"
             android:fontFamily="@font/notosans_regular"
-            android:includeFontPadding="false"/>
+            android:includeFontPadding="false"
+            android:theme="@style/CustomCheckBox"
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/surveyContentTextView"
@@ -70,16 +77,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/surveyButton"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:text="설문조사 참여"
                 android:fontFamily="@font/notosans_semibold"
                 android:includeFontPadding="false"
-                android:backgroundTint="@color/second"
+                android:background="@drawable/style_pointbutton_radias"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
