--- a/app/src/main/res/layout/fragment_survey_list.xml
+++ b/app/src/main/res/layout/fragment_survey_list.xml
@@ -1,191 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ui.vote.SurveyListFragment" >
+    android:orientation="vertical"
+    android:padding="20dp"
+    android:background="#FFFFFF"
+    tools:context="ui.vote.SurveyListFragment">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/surveyListToolbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        android:gravity="start"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/surveyListToolbar"
-        app:layout_constraintBottom_toTopOf="@id/surveyListButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/surveyListTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:fontFamily="@font/notosans_semibold"
+            android:includeFontPadding="false"
+            android:text="설문조사"
+            android:textSize="20sp" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/surveyListTextView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/notosans_semibold"
+            android:includeFontPadding="false"
+            android:text="설문조사는 입주민도 만들 수 있어요!"
+            android:textSize="16sp" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/surveyListTextViewTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/notosans_semibold"
-                    android:hint="설문조사 주제"
-                    android:includeFontPadding="false" />
-            </com.google.android.material.textfield.TextInputLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="20dp"
+            android:background="#000000" />
 
-            <TextView
-                android:id="@+id/surveyListTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="최소 2개 이상의 항목을 작성해주세요"
-                android:fontFamily="@font/notosans_semibold"
-                android:includeFontPadding="false"/>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/surveyListTextViewWrite1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/notosans_semibold"
-                    android:hint="첫 번째 항목 입력"
-                    android:includeFontPadding="false" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/surveyListTextViewWrite2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/notosans_semibold"
-                    android:hint="두 번째 항목 입력"
-                    android:includeFontPadding="false" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/surveyListTextViewWrite3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/notosans_semibold"
-                    android:hint="세 번째 항목 입력"
-                    android:includeFontPadding="false" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <TextView
-                android:id="@+id/surveyListTextViewWrite1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="어떤 내용의 설문조사인지 알려주세요"
-                android:fontFamily="@font/notosans_semibold"
-                android:includeFontPadding="false"/>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/surveyListTextViewContent"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/notosans_semibold"
-                    android:hint="설문조사 내용"
-                    android:includeFontPadding="false" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <CalendarView
-                android:id="@+id/calendarView3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="16dp">
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/surveyListTextViewStartDate"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="시작 날짜"
-                    android:fontFamily="@font/notosans_regular"
-                    android:includeFontPadding="false"/>
-
-                <TextView
-                    android:id="@+id/surveyListTextViewEndDate"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="종료 날짜"
-                    android:fontFamily="@font/notosans_regular"
-                    android:includeFontPadding="false"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/surveyListRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="550dp" />
             </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/surveyListTextViewStartDate1"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="2019-03-01"
-                    android:fontFamily="@font/notosans_regular"
-                    android:includeFontPadding="false"/>
-
-                <TextView
-                    android:id="@+id/surveyListTextViewEndDate1"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="2019-03-01"
-                    android:fontFamily="@font/notosans_regular"
-                    android:includeFontPadding="false"/>
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
-
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/surveyListButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="설문조사 만들기"
+        android:layout_height="40dp"
+        android:background="@drawable/style_pointbutton_radias"
         android:fontFamily="@font/notosans_semibold"
         android:includeFontPadding="false"
-        android:backgroundTint="@color/second"
-        android:textSize="18sp"
+        android:text="설문 조사 만들기"
         android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
